--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,5 +3,11 @@ repos:
     rev: v2.3.0
     hooks:
     - id: check-json
+
+repos:
+-   repo: https://github.com/triciahf/sen_pre_commit_hooks
+    rev: v2.3.0
+    hooks:
+    - id: check-json
     - id: check-yaml-format
-      exclude: (.pre-commit-config.yaml)
+      exclude: (.pre-commit-config.yaml)      
