--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,6 +6,7 @@ repos:
 
 repos:
 -   repo: https://github.com/triciahf/sen_pre_commit_hooks
+    rev: v0.0.1
     hooks:
     - id: check-json
     - id: check-yaml-format
