--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,7 +6,7 @@ repos:
 
 repos:
 -   repo: https://github.com/triciahf/sen_pre_commit_hooks
-    rev: main
+    rev: v0.0.1
     hooks:
     - id: check-yaml-format
       exclude: (.pre-commit-config.yaml)      
