--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,5 +8,5 @@ repos:
 -   repo: https://github.com/triciahf/sen_pre_commit_hooks
     rev: v0.0.2
     hooks:
-    - id: check-yaml-format
+    - id: check-clang-format
       exclude: (.pre-commit-config.yaml)      
