--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,7 +6,10 @@ repos:
 
 repos:
 -   repo: https://github.com/triciahf/sen_pre_commit_hooks
-    rev: v0.0.3
+    rev: v0.0.4
     hooks:
     - id: check-clang-format
       exclude: (.pre-commit-config.yaml)      
+    - id: check-headers
+      args: ["-header_line", "Sen Infrastructure", "--fix"]
+      exclude: (__init__.py)      
