--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,7 +6,7 @@ repos:
 
 repos:
 -   repo: https://github.com/triciahf/sen_pre_commit_hooks
-    rev: v0.0.13
+    rev: v0.0.14
     hooks:
     - id: check-clang-format
       exclude: (.pre-commit-config.yaml)      
@@ -16,4 +16,6 @@ repos:
     - id: check-cmake-format
     - id: check-markdown
     - id: check-yaml-format
-      exclude: (.pre-commit-config.yaml)    
+      exclude: (.pre-commit-config.yaml)
+    - id: check-yaml-lint
+      exclude: (.pre-commit-config.yaml)
