pre-commit added

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,6 +3,7 @@ repos:
     rev: v2.3.0
     hooks:
     - id: check-json
+    - id: forbid_new_submodules
 
 repos:
 -   repo: https://github.com/triciahf/sen_pre_commit_hooks
