--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,23 +1,23 @@
 repos:
--   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.3.0
-    hooks:
-    - id: check-json
-    - id: forbid_new_submodules
--   repo: https://github.com/triciahf/sen_pre_commit_hooks
-    rev: v0.0.14
-    hooks:
-    - id: check-clang-format
-      exclude: (.pre-commit-config.yaml)      
-    - id: check-headers
-      args:
-      - -header_line
-      - Sen Infrastructure
-      - --fix
-      exclude: (__init__.py)
-    - id: check-cmake-format
-    - id: check-markdown
-    - id: check-yaml-format
-      exclude: (.pre-commit-config.yaml)
-    - id: check-yaml-lint
-      exclude: (.pre-commit-config.yaml)
+- repo: https://github.com/pre-commit/pre-commit-hooks
+  rev: v2.3.0
+  hooks:
+  - id: check-json
+  - id: forbid-new-submodules
+- repo: https://github.com/triciahf/sen_pre_commit_hooks
+  rev: v0.0.14
+  hooks:
+  - id: check-clang-format
+    exclude: (.pre-commit-config.yaml)      
+  - id: check-headers
+    args:
+    - -header_line
+    - Sen Infrastructure
+    - --fix
+    exclude: (__init__.py)
+  - id: check-cmake-format
+  - id: check-markdown
+  - id: check-yaml-format
+    exclude: (.pre-commit-config.yaml)
+  - id: check-yaml-lint
+    exclude: (.pre-commit-config.yaml)
