--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,7 +3,7 @@ repos:
   rev: v6.0.0
   hooks:
   - id: check-json
-  - id: forbid-new-submodules
+  - id: forbid-submodules
 - repo: https://github.com/triciahf/sen_pre_commit_hooks
   rev: v0.0.14
   hooks:
