--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,6 +4,7 @@ repos:
   hooks:
   - id: check-json
   - id: forbid-submodules
+  - id: trailing-whitespace
 - repo: https://github.com/triciahf/sen_pre_commit_hooks
   rev: v0.0.14
   hooks:
