--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,6 +5,7 @@ repos:
   - id: check-json
   - id: forbid-submodules
   - id: trailing-whitespace
+  - id: mixed-line-ending
 - repo: https://github.com/triciahf/sen_pre_commit_hooks
   rev: v0.0.14
   hooks:
