--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,6 +6,7 @@ repos:
   - id: forbid-submodules
   - id: trailing-whitespace
   - id: mixed-line-ending
+  - id: end-of-file-fixer
 - repo: https://github.com/triciahf/sen_pre_commit_hooks
   rev: v0.0.14
   hooks:
