--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,6 +7,7 @@ repos:
   - id: trailing-whitespace
   - id: mixed-line-ending
   - id: end-of-file-fixer
+  - id: check-symlinks
 - repo: https://github.com/triciahf/sen_pre_commit_hooks
   rev: v0.0.14
   hooks:
