pre-commit added

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,13 +1,10 @@
+---
 name: cicd
-
 on:
   push:
-    branches:
-      - main
+    branches: [main]
   pull_request:
-    branches:
-      - main
-
+    branches: [main]
 jobs:
   call-workflow-passing-data:
     uses: triciahf/.github/.github/workflows/ci-build.yaml@main
