--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,7 +8,7 @@ repos:
   - id: mixed-line-ending
   - id: end-of-file-fixer
 - repo: https://github.com/triciahf/sen_pre_commit_hooks
-  rev: v0.0.16
+  rev: v0.0.17
   hooks:
   - id: check-clang-format
     exclude: (.pre-commit-config.yaml)
@@ -26,3 +26,4 @@ repos:
     exclude: (.pre-commit-config.yaml)
   - id: check-tabs
   - id: check-file-name-casing
+  - id: check-method-endings
