--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,7 +8,7 @@ repos:
   - id: mixed-line-ending
   - id: end-of-file-fixer
 - repo: https://github.com/triciahf/sen_pre_commit_hooks
-  rev: v0.0.17
+  rev: v0.0.18
   hooks:
   - id: check-clang-format
     exclude: (.pre-commit-config.yaml)
@@ -27,3 +27,4 @@ repos:
   - id: check-tabs
   - id: check-file-name-casing
   - id: check-method-endings
+  - id: check-function-documentation
