--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,7 +8,7 @@ repos:
   - id: mixed-line-ending
   - id: end-of-file-fixer
 - repo: https://github.com/triciahf/sen_pre_commit_hooks
-  rev: v0.0.20
+  rev: v0.0.21
   hooks:
   - id: check-clang-format
     exclude: (.pre-commit-config.yaml)
@@ -29,3 +29,4 @@ repos:
   - id: check-method-endings
   - id: check-stl-braces
   - id: check-build-test
+  - id: check-clang-tidy
