--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,7 +8,7 @@ repos:
   - id: mixed-line-ending
   - id: end-of-file-fixer
 - repo: https://github.com/triciahf/sen_pre_commit_hooks
-  rev: v0.0.22
+  rev: v0.0.23
   hooks:
   - id: check-clang-format
     exclude: (.pre-commit-config.yaml)
@@ -31,3 +31,5 @@ repos:
   - id: check-build-test
   - id: check-clang-tidy
   - id: check-stl-indentation
+  - id: check-stl-struct-spacing
+  - id: check-stl-comment-format
